src/components/info/style.styl
.scrollInfo {
    position: relative;
    flex: 1 200 auto;
    overflow-y: auto;
    overflow-x: hidden;
    width: 100vw;
    display: flex;
    flex-direction: column;

    &:first-child {
        flex: 1;
    }
}

.detail {
    position: fixed;
    display: flex;
    flex-direction: column;
    height: 100%;
}

.detailFixed {
    position: relative;
    z-index: 10;
    width: 99vw;
    display: flex;
    flex: 1 0 auto;

    .cover {
        height: 0;
        padding: 4vw 4vw 0 4vw;
        filter: drop-shadow(0px 0px 2px)
    }

    .cover img {
        width: 25vw;
        border-radius: 10px;
        margin-bottom: -10vw;
    }

    .info {
        padding: 4vw 0 0 4vw;
        color: white;
        display: flex;
        flex-direction: column;
        flex: 2;

        h1 {
            font-family: var(--Font-title);
            font-weight: bolder;
            font-size: 4vw;
            margin: 0 auto 0;
        }
    }

    .infoline {
        font-family: var(--Font-title);
        font-weight: 600;
        font-size: 1.5vw;
        color: #888;
        padding: 1.2vw 0; 

        & > span:before {
            content: "·";
            padding: 1vh;
            font-weight: 900;
        }

        & > span:first-of-type:before {
            content: "";
        }
    }
}

[class*=content-nav] {
    background-color: transparent!important;
}

